# AndroidDevNews

./: .env.example  .gitignore  Dockerfile  README.md  WIP.md  alembic.ini  androidweekly.csv  db_stats.py  digest_ai.md  digest_ai_claude.md  digest_ai_deep.md  digest_kotlin_deep.md  docker-compose.yml  gradle.properties  package-lock.json  package.json  probe_androidweekly.py  probe_content.py  probe_csv.py  probe_parse_html.py  probe_raw_feed.py  pyproject.toml  readability.js  schema.sql  settings.gradle.kts
api/: admin.py  db.py  main.py  schemas.py
digests/: ai_2025-04.md  ai_2025-06.md  ai_2025-07.md  ai_2025-08.md  ai_2025-09.md  ai_2025-10.md  ai_2025-11.md  ai_2025-12.md  ai_2026-01.md  ai_2026-02.md  ai_2026-03.md  ai_2026-04.md  architecture_2026-04.md  compose_2025-09.md  compose_2025-10.md  compose_2025-11.md  compose_2025-12.md  compose_2026-01.md  compose_2026-02.md  compose_2026-03.md  compose_2026-04.md  kmp_2026-04.md  kotlin_2025-09.md  kotlin_2025-10.md  kotlin_2025-11.md  kotlin_2025-12.md  kotlin_2026-01.md  kotlin_2026-02.md  kotlin_2026-03.md  kotlin_2026-04.md  performance_2026-04.md  testing_2026-04.md
kmp/: .gitignore  gradle.properties  settings.gradle.kts
mockup/: droidpulse_desktop.html  droidpulse_mobile.html  droidpulse_mobile_article_detail_page.html
pipeline/: add_articles.py  embed.py  enrich.py  fetch_articles.py  gen_digest.py  import_csv.py  import_digests.py  import_podcasts.py  list_months.py  query_articles.py  query_status.py  run_pipeline.py  run_podcast_pipeline.py  save_digest.py  scrape.py  scrape_medium.py  search.py  (+5 more)
(+379 files in other folders)
